# 3D-Geometry-Shapes

./: CMakeLists.txt  README.md
res/: CMakeLists.txt  basic.shader
src/: CMakeLists.txt  Cube.cpp  Cube.h  Entity.cpp  Entity.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
